# lanetatt-classproject

./: .gitignore  .gitmodules  FINAL_REPORT.md  README.md  ROBUSTNESS_REPORT.md  VISUALIZATION_TEST_REPORT.md  WANDB_QUICKSTART.md  pyproject.toml  start_overnight_training.sh  train.py  train_laneatt.sh  visualize_custom.py
configs/: paths.yaml  tusimple_debug.yaml  tusimple_full.yaml  tusimple_resnet122.yaml  tusimple_resnet18.yaml  tusimple_resnet34.yaml
docs/: datasets.md  wandb-experiments.md
scripts/: clean_env.sh  evaluate_culane_robustness.py  evaluate_robustness.py  generate_culane_aug.py  run_all_models.sh  run_wandb_experiments.sh  setup_wandb.sh  train_laneatt.sh  visualize_custom.py
src/: __init__.py  create_subset_data.py  train.py
