[tool.poetry]
name = "laneatt-classproject"
version = "0.1.0"
description = "Lane detection class project"
authors = ["Bozhen Zhou", "Larry Liao", "Manan Hitesh Masheswari", "Rashiqul Alam"]
packages = [
  { include = "src" }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.15"
# Core ML/DL
torch = "2.5.1"
torchvision = "0.20.1"
numpy = "^1.24.0,<2.0"
# Computer Vision
opencv-python = "^4.8.0,<4.10.0"
# Data science
matplotlib = "^3.7.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
pillow = "^10.0.0"
# Utilities
pyyaml = "^6.0"
tqdm = "^4.65.0"
rich = "^13.7.0"
# LaneATT-specific dependencies
imgaug = "^0.4.0"
shapely = "^1.8.0,<2.0"
xmljson = "^0.2.0"
thop = "^0.1.1"
p-tqdm = "^1.4.0"
lxml = "^4.9.0"
ujson = "^5.7.0"
gdown = "^4.7.0"
# Logging/Monitoring
tensorboard = "^2.14.0"
wandb = "^0.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"