[tool.poetry]
name = "laneatt-classproject"
version = "0.1.0"
description = "Lane detection class project"
authors = ["Bozhen Zhou", "Larry Liao", "Manan Hitesh Masheswari", "Rashiqul Alam"]
packages = [
  { include = "src" }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.15"
# Core ML/DL
torch = "2.5.1"
torchvision = "0.20.1"
numpy = ">=1.21,<2.0"
# Computer Vision
opencv-python = ">=4.8,<4.10"
# Data science
matplotlib = "^3.9.0"
scipy = "^1.10.0"
scikit-learn = "^1.5.0"
pillow = "^10.0.0"
# Utilities
pyyaml = "^6.0.1"
tqdm = "^4.66.0"
rich = "^13.7.0"
# LaneATT-specific dependencies
imgaug = "^0.4.0"
shapely = "^2.1.2"
xmljson = "^0.2.1"
thop = "^0.1.1"
p-tqdm = "^1.4.2"
lxml = "^6.0.2"
ujson = "^5.11.0"
gdown = "^5.2.0"
# Logging/Monitoring
tensorboard = "^2.17.0"
wandb = "^0.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"